--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,9 @@
     <h1 class="title">건국대학교<br>전공책 교환 플랫폼</h1>
 
     <p class="content">
-        서비스에 대한 간단한 설명과 소개 서비스에 대한 간단한 설명과 소개 서비스에 대한 간단한 설명과 소개 서비스에 대한 간단한 설명과 소개 서비스에 대한 간단한 설명과 소개 서비스에 대한 간단한
-        설명과 소개
+        <strong>우리학교, 우리과 친구들과 쉽게 전공책 거래하기!</strong>
+        <br>
+        BooKU는 건국대학생 서울캠퍼스 학생이라면 누구나 쉽게 전공책을 거래할 수 있는 플랫폼입니다.
     </p>
     <div class="explore">
         <button>Explore</button>
