--- a/templates/notice/notice_detail.html
+++ b/templates/notice/notice_detail.html
@@ -16,7 +16,8 @@
                 </div>
     </div>
     <hr class="line1">
-    <p class="content">{{notice.content}}</p>
+    <textarea id="content" disabled>{{notice.content}}</textarea>
+    
     <hr class="line2">
 </div>
 
