--- a/static/css/notice_detail.css
+++ b/static/css/notice_detail.css
@@ -33,9 +33,15 @@
     vertical-align: bottom;
 }
 
-.content{
-   
-   white-space: pre-wrap;
+#content{
+   width:100%;
+   height:30rem;
+   outline: none;
+   background:white;
+   border:none;
+   resize: none;
+   font-family: Inter;
+   color: var(--text-color);
 }
 
 .info{
