UPDATE privacy policy, terms of service

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,9 +39,9 @@
           <h4>BooKU</h4>
           Contact Us | booku@outlook.kr
           <div class="">
-            <a class="terms_of" href="">서비스이용약관</a>
+            <a class="terms_of" href="{% url 'user:terms_of_service' %}">서비스이용약관</a>
            <span class="gray">및</span>
-            <a class="terms_of" href="">개인정보처리방침</a>
+            <a class="terms_of" href="{% url 'user:privacy_policy' %}">개인정보처리방침</a>
           </div>
           <div>
             © 2020 Copyright:
