--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -358,167 +358,108 @@
         <div class="terms_of_service">
             <label class="title" for="terms_of_service">이용약관</label>
             <textarea name="terms_of_service" id="terms_of_service" disabled>
-('http://www.booku.club/'이하 'BooKU')은(는) 개인정보보호법에 따라 이용자의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 있도록 다음과 같은 처리방침을 두고 있습니다.
-
-('BooKU') 은(는) 회사는 개인정보처리방침을 개정하는 경우 웹사이트 공지사항(또는 개별공지)을 통하여 공지할 것입니다.
-
-○ 본 방침은부터 2020년 12월 31일부터 시행됩니다.
-
-
-1. 개인정보의 처리 목적 ('http://www.booku.club/'이하 'BooKU')은(는) 개인정보를 다음의 목적을 위해 처리합니다. 처리한 개인정보는 다음의 목적이외의 용도로는 사용되지 않으며 이용 목적이 변경될 시에는 사전동의를 구할 예정입니다.
-
-가. 홈페이지 회원가입 및 관리
-
-회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 제한적 본인확인제 시행에 따른 본인확인, 서비스 부정이용 방지, 만14세 미만 아동 개인정보 수집 시 법정대리인 동의 여부 확인, 각종 고지·통지, 고충처리, 분쟁 조정을 위한 기록 보존 등을 목적으로 개인정보를 처리합니다.
-
-
-나. 민원사무 처리
-
-민원인의 신원 확인, 민원사항 확인, 사실조사를 위한 연락·통지, 처리결과 통보 등을 목적으로 개인정보를 처리합니다.
-
-
-다. 재화 또는 서비스 제공
-
-서비스 제공, 콘텐츠 제공, 맞춤 서비스 제공, 본인인증 등을 목적으로 개인정보를 처리합니다.
-
-
-라. 마케팅 및 광고에의 활용
-
-신규 서비스(제품) 개발 및 맞춤 서비스 제공, 이벤트 및 광고성 정보 제공 및 참여기회 제공 , 인구통계학적 특성에 따른 서비스 제공 및 광고 게재 , 서비스의 유효성 확인, 접속빈도 파악 또는 회원의 서비스 이용에 대한 통계 등을 목적으로 개인정보를 처리합니다.
-
-
-2. 개인정보 파일 현황
-
-1. 개인정보 파일명 : BooKU 개인정보
-개인정보 항목 : 이메일, 비밀번호, 로그인ID, 성별, 생년월일, 학력, 서비스 이용 기록, 접속 로그, 쿠키, 접속 IP 정보, 소속 대학 및 학과
-수집방법 : 홈페이지
-보유근거 : 소속 대학 및 학과 기반 맞춤 서비스 제공
-보유기간 : 3년
-관련법령 : 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년
-
-
-3. 개인정보의 처리 및 보유 기간
-
-① ('BooKU')은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집시에 동의 받은 개인정보 보유,이용기간 내에서 개인정보를 처리,보유합니다.
-
-② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.
-
-1.<홈페이지 회원가입 및 관리>
-<홈페이지 회원가입 및 관리>와 관련한 개인정보는 수집.이용에 관한 동의일로부터<3년>까지 위 이용목적을 위하여 보유.이용됩니다.
-보유근거 : 소속 대학 및 학과 기반 맞춤 서비스 제공
-관련법령 : 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년
-예외사유 :
-
-
-4. 개인정보의 제3자 제공에 관한 사항
-
-① ('http://www.booku.club/'이하 'BooKU')은(는) 정보주체의 동의, 법률의 특별한 규정 등 개인정보 보호법 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.
-
-② ('http://www.booku.club/')은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.
-
-1. <>
-개인정보를 제공받는 자 :
-제공받는 자의 개인정보 이용목적 :
-제공받는 자의 보유.이용기간:
-
-
-5. 개인정보처리 위탁
-
-① ('BooKU')은(는) 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다.
-
-1. <>
-위탁받는 자 (수탁자) :
-위탁하는 업무의 내용 :
-위탁기간 :
-② ('http://www.booku.club/'이하 'BooKU')은(는) 위탁계약 체결시 개인정보 보호법 제25조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적․관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리․감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다.
-
-③ 위탁업무의 내용이나 수탁자가 변경될 경우에는 지체없이 본 개인정보 처리방침을 통하여 공개하도록 하겠습니다.
-
-6. 정보주체와 법정대리인의 권리·의무 및 그 행사방법 이용자는 개인정보주체로써 다음과 같은 권리를 행사할 수 있습니다.
-
-① 정보주체는 BooKU에 대해 언제든지 개인정보 열람,정정,삭제,처리정지 요구 등의 권리를 행사할 수 있습니다.
-
-② 제1항에 따른 권리 행사는BooKU에 대해 개인정보 보호법 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 BooKU은(는) 이에 대해 지체 없이 조치하겠습니다.
-
-③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다. 이 경우 개인정보 보호법 시행규칙 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.
-
-④ 개인정보 열람 및 처리정지 요구는 개인정보보호법 제35조 제5항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다.
-
-⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.
-
-⑥ BooKU은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.
-
-
-
-7. 처리하는 개인정보의 항목 작성
-
-① ('http://www.booku.club/'이하 'BooKU')은(는) 다음의 개인정보 항목을 처리하고 있습니다.
-
-1<제화 또는 서비스 제공>
-필수항목 : 이메일, 성별, 생년월일, 학력, 소속 대학 및 학과 정보
-- 선택항목 :
-
-
-8. 개인정보의 파기('BooKU')은(는) 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.
-
--파기절차
-이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져(종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 혹은 즉시 파기됩니다. 이 때, DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.
-
--파기기한
-이용자의 개인정보는 개인정보의 보유기간이 경과된 경우에는 보유기간의 종료일로부터 5일 이내에, 개인정보의 처리 목적 달성, 해당 서비스의 폐지, 사업의 종료 등 그 개인정보가 불필요하게 되었을 때에는 개인정보의 처리가 불필요한 것으로 인정되는 날로부터 5일 이내에 그 개인정보를 파기합니다.
-
--파기방법
-
-전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다
-
-
-
-9. 개인정보 자동 수집 장치의 설치•운영 및 거부에 관한 사항
-
-① BooKU 은 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠기(cookie)’를 사용합니다. ② 쿠키는 웹사이트를 운영하는데 이용되는 서버(http)가 이용자의 컴퓨터 브라우저에게 보내는 소량의 정보이며 이용자들의 PC 컴퓨터내의 하드디스크에 저장되기도 합니다. 가. 쿠키의 사용 목적 : 이용자가 방문한 각 서비스와 웹 사이트들에 대한 방문 및 이용형태, 인기 검색어, 보안접속 여부, 등을 파악하여 이용자에게 최적화된 정보 제공을 위해 사용됩니다. 나. 쿠키의 설치•운영 및 거부 : 웹브라우저 상단의 도구>인터넷 옵션>개인정보 메뉴의 옵션 설정을 통해 쿠키 저장을 거부 할 수 있습니다. 다. 쿠키 저장을 거부할 경우 맞춤형 서비스 이용에 어려움이 발생할 수 있습니다.
-
-10. 개인정보 보호책임자 작성
-
-① BooKU(‘http://www.booku.club/’이하 ‘BooKU) 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.
-
-▶ 개인정보 보호책임자
-성명 :BooKU
-직책 :admin
-직급 :admin
-연락처 :01000000000, booku@outlook.kr,
-※ 개인정보 보호 담당부서로 연결됩니다.
-
-▶ 개인정보 보호 담당부서
-부서명 :
-담당자 :
-연락처 :, ,
-② 정보주체께서는 BooKU(‘http://www.booku.club/’이하 ‘BooKU) 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. BooKU(‘http://www.booku.club/’이하 ‘BooKU) 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.
-
-11. 개인정보 처리방침 변경
-
-①이 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.
-
-
-
-12. 개인정보의 안전성 확보 조치 ('BooKU')은(는) 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.
-
-1. 정기적인 자체 감사 실시
-개인정보 취급 관련 안정성 확보를 위해 정기적(분기 1회)으로 자체 감사를 실시하고 있습니다.
-
-2. 개인정보 취급 직원의 최소화 및 교육
-개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.
-
-3. 내부관리계획의 수립 및 시행
-개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.
-
-4. 개인정보의 암호화
-이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.
-
-5. 접속기록의 보관 및 위변조 방지
-개인정보처리시스템에 접속한 기록을 최소 6개월 이상 보관, 관리하고 있으며, 접속 기록이 위변조 및 도난, 분실되지 않도록 보안기능 사용하고 있습니다.
-
-6. 개인정보에 대한 접근 제한
-개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.
+제1조(목적) 이 약관은 BOOKU(전자상거래 사업자)가 운영하는 BooKU(이하 “BooKU”이라 한다)에서 제공하는 인터넷 관련 서비스(이하 “서비스”라 한다)를 이용함에 있어 BooKU과 이용자의 권리․의무 및 책임사항을 규정함을 목적으로 합니다.
+
+제2조(정의)
+① “BooKU”이란 BooKU가 회원 간 도서 거래 목적의 커뮤니티를 말하며, 아울러 BooKU을 운영하는 사업자의 의미로도 사용합니다.
+② “이용자”란 “BooKU”에 접속하여 이 약관에 따라 “BooKU”이 제공하는 서비스를 받는 회원을 말합니다.
+③ ‘회원’이라 함은 “BooKU”에 회원등록을 한 자로서, 계속적으로 “BooKU”이 제공하는 서비스를 이용할 수 있는 자를 말합니다.
+
+제3조 (약관 등의 명시와 설명 및 개정)
+① “BooKU”은 이 약관의 내용과 상호 및 전자우편주소 등을 이용자가 쉽게 알 수 있도록 BooKU의 초기 서비스화면(전면)에 게시합니다. 다만, 약관의 내용은 이용자가 연결화면을 통하여 볼 수 있도록 할 수 있습니다.
+② “BooKU은 이용자가 약관에 동의하기에 앞서 약관에 정하여져 있는 내용 중 청약철회 등과 같은 중요한 내용을 이용자가 이해할 수 있도록 별도의 연결화면 또는 팝업화면 등을 제공하여 이용자의 확인을 구하여야 합니다.
+③ “BooKU”은 「전자상거래 등에서의 소비자보호에 관한 법률」, 「약관의 규제에 관한 법률」, 「전자문서 및 전자거래기본법」, 「전자금융거래법」, 「전자서명법」, 「정보통신망 이용촉진 및 정보보호 등에 관한 법률」, 「방문판매 등에 관한 법률」, 「소비자기본법」 등 관련 법을 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.
+④ “BooKU”이 약관을 개정할 경우에는 적용일자 및 개정사유를 명시하여 현행약관과 함께 BooKU의 초기화면에 그 적용일자 7일 이전부터 적용일자 전일까지 공지합니다. 다만, 이용자에게 불리하게 약관내용을 변경하는 경우에는 최소한 30일 이상의 사전 유예기간을 두고 공지합니다. 이 경우 "BooKU“은 개정 전 내용과 개정 후 내용을 명확하게 비교하여 이용자가 알기 쉽도록 표시합니다.
+⑤ “BooKU”이 약관을 개정할 경우에는 그 개정약관은 그 적용일자 이후에 체결되는 계약에만 적용되고 그 이전에 이미 체결된 계약에 대해서는 개정 전의 약관조항이 그대로 적용됩니다. 다만 이미 계약을 체결한 이용자가 개정약관 조항의 적용을 받기를 원하는 뜻을 제3항에 의한 개정약관의 공지기간 내에 “BooKU”에 송신하여 “BooKU”의 동의를 받은 경우에는 개정약관 조항이 적용됩니다.
+⑥ 이 약관에서 정하지 아니한 사항과 이 약관의 해석에 관하여는 전자상거래 등에서의 소비자보호에 관한 법률, 약관의 규제 등에 관한 법률, 공정거래위원회가 정하는 전자상거래 등에서의 소비자 보호지침 및 관계법령 또는 상관례에 따릅니다.
+
+제4조(서비스의 제공 및 변경)
+① “BooKU”은 다음과 같은 업무를 수행합니다.
+1. 각 회원간 도서 거래 커뮤니티 제공
+2. 기타 “BooKU”이 정하는 업무
+
+② “BooKU”은 서비스의 품절 또는 기술적 사양의 변경 등의 경우에는 장차 체결되는 계약에 의해 제공할 서비스의 내용을 변경할 수 있습니다. 이 경우에는 변경된 서비스의 내용 및 제공일자를 명시하여 현재의 서비스의 내용을 게시한 곳에 즉시 공지합니다.
+③ “BooKU”이 제공하기로 이용자와 계약을 체결한 내용을 서비스등의 품절 또는 기술적 사양의 변경 등의 사유로 변경할 경우에는 그 사유를 이용자에게 통지 가능한 주소로 즉시 통지합니다.
+④ 전항의 경우 “BooKU”은 이로 인하여 이용자가 입은 손해를 배상합니다. 다만, “BooKU”이 고의 또는 과실이 없음을 입증하는 경우에는 그러하지 아니합니다.
+
+제5조(서비스의 중단)
+① “BooKU”은 컴퓨터 등 정보통신설비의 보수점검․교체 및 고장, 통신의 두절 등의 사유가 발생한 경우에는 서비스의 제공을 일시적으로 중단할 수 있습니다.
+② “BooKU”은 제1항의 사유로 서비스의 제공이 일시적으로 중단됨으로 인하여 이용자 또는 제3자가 입은 손해에 대하여 배상합니다. 단, “BooKU”이 고의 또는 과실이 없음을 입증하는 경우에는 그러하지 아니합니다.
+③ 사업종목의 전환, 사업의 포기, 업체 간의 통합 등의 이유로 서비스를 제공할 수 없게 되는 경우에는 “BooKU”은 제8조에 정한 방법으로 이용자에게 통지하고 당초 “BooKU”에서 제시한 조건에 따라 소비자에게 보상합니다. 다만, “BooKU”이 보상기준 등을 고지하지 아니한 경우에는 이용자들의 마일리지 또는 적립금 등을 “BooKU”에서 통용되는 통화가치에 상응하는 현물 또는 현금으로 이용자에게 지급합니다.
+
+제6조(회원가입)
+① 이용자는 “BooKU”이 정한 가입 양식에 따라 회원정보를 기입한 후 이 약관에 동의한다는 의사표시를 함으로서 회원가입을 신청합니다.
+② “BooKU”은 제1항과 같이 회원으로 가입할 것을 신청한 이용자 중 다음 각 호에 해당하지 않는 한 회원으로 등록합니다.
+1. 가입신청자가 이 약관 제7조제3항에 의하여 이전에 회원자격을 상실한 적이 있는 경우, 다만 제7조제3항에 의한 회원자격 상실 후 3년이 경과한 자로서 “BooKU”의 회원재가입 승낙을 얻은 경우에는 예외로 한다.
+2. 등록 내용에 허위, 기재누락, 오기가 있는 경우
+3. 기타 회원으로 등록하는 것이 “BooKU”의 기술상 현저히 지장이 있다고 판단되는 경우
+
+③ 회원가입계약의 성립 시기는 “BooKU”의 승낙이 회원에게 도달한 시점으로 합니다.
+④ 회원은 회원가입 시 등록한 사항에 변경이 있는 경우, 상당한 기간 이내에 “BooKU”에 대하여 회원정보 수정 등의 방법으로 그 변경사항을 알려야 합니다.
+
+제7조(회원 탈퇴 및 자격 상실 등)
+① 회원은 “BooKU”에 언제든지 탈퇴를 요청할 수 있으며 “BooKU”은 즉시 회원탈퇴를 처리합니다.
+② 회원이 다음 각 호의 사유에 해당하는 경우, “BooKU”은 회원자격을 제한 및 정지시킬 수 있습니다.
+1. 가입 신청 시에 허위 내용을 등록한 경우
+2. “BooKU”을 이용하여 구입한 서비스 등의 대금, 기타 “BooKU”이용에 관련하여 회원이 부담하는 채무를 기일에 지급하지 않는 경우
+3. 다른 사람의 “BooKU” 이용을 방해하거나 그 정보를 도용하는 등 전자상거래 질서를 위협하는 경우
+4. “BooKU”을 이용하여 법령 또는 이 약관이 금지하거나 공서양속에 반하는 행위를 하는 경우
+
+③ “BooKU”이 회원 자격을 제한․정지 시킨 후, 동일한 행위가 2회 이상 반복되거나 30일 이내에 그 사유가 시정되지 아니하는 경우 “BooKU”은 회원자격을 상실시킬 수 있습니다.
+④ “BooKU”이 회원자격을 상실시키는 경우에는 회원등록을 말소합니다. 이 경우 회원에게 이를 통지하고, 회원등록 말소 전에 최소한 30일 이상의 기간을 정하여 소명할 기회를 부여합니다.
+제8조(회원에 대한 통지)
+① “BooKU”이 회원에 대한 통지를 하는 경우, 회원이 “BooKU”과 미리 약정하여 지정한 전자우편 주소로 할 수 있습니다.
+② “BooKU”은 불특정다수 회원에 대한 통지의 경우 1주일이상 “BooKU” 게시판에 게시함으로서 개별 통지에 갈음할 수 있습니다. 다만, 회원 본인의 거래와 관련하여 중대한 영향을 미치는 사항에 대하여는 개별통지를 합니다.
+
+제8조(개인정보보호)
+“BooKU”는 개인정보 수집 및 활용에 있어 ‘BooKU 개인정보처리방침’ 및 아래의 항목을 따른다.
+① “BooKU”은 이용자의 개인정보 수집시 서비스제공을 위하여 필요한 범위에서 최소한의 개인정보를 수집합니다.
+② “BooKU”은 회원가입시 구매계약이행에 필요한 정보를 미리 수집하지 않습니다. 다만, 관련 법령상 의무이행을 위하여 구매계약 이전에 본인확인이 필요한 경우로서 최소한의 특정 개인정보를 수집하는 경우에는 그러하지 아니합니다.
+③ “BooKU”은 이용자의 개인정보를 수집·이용하는 때에는 당해 이용자에게 그 목적을 고지하고 동의를 받습니다.
+④ “BooKU”은 수집된 개인정보를 목적외의 용도로 이용할 수 없으며, 새로운 이용목적이 발생한 경우 또는 제3자에게 제공하는 경우에는 이용·제공단계에서 당해 이용자에게 그 목적을 고지하고 동의를 받습니다. 다만, 관련 법령에 달리 정함이 있는 경우에는 예외로 합니다.
+⑤ “BooKU”이 제2항과 제3항에 의해 이용자의 동의를 받아야 하는 경우에는 개인정보관리 책임자의 신원(소속, 성명 및 전화번호, 기타 연락처), 정보의 수집목적 및 이용목적, 제3자에 대한 정보제공 관련사항(제공받은자, 제공목적 및 제공할 정보의 내용) 등 「정보통신망 이용촉진 및 정보보호 등에 관한 법률」 제22조제2항이 규정한 사항을 미리 명시하거나 고지해야 하며 이용자는 언제든지 이 동의를 철회할 수 있습니다.
+⑥ 이용자는 언제든지 “BooKU”이 가지고 있는 자신의 개인정보에 대해 열람 및 오류정정을 요구할 수 있으며 “BooKU”은 이에 대해 지체 없이 필요한 조치를 취할 의무를 집니다. 이용자가 오류의 정정을 요구한 경우에는 “BooKU”은 그 오류를 정정할 때까지 당해 개인정보를 이용하지 않습니다.
+⑦ “BooKU”은 개인정보 보호를 위하여 이용자의 개인정보를 취급하는 자를 최소한으로 제한하여야 하며 신용카드, 은행계좌 등을 포함한 이용자의 개인정보의 분실, 도난, 유출, 동의 없는 제3자 제공, 변조 등으로 인한 이용자의 손해에 대하여 모든 책임을 집니다.
+⑧ “BooKU” 또는 그로부터 개인정보를 제공받은 제3자는 개인정보의 수집목적 또는 제공받은 목적을 달성한 때에는 당해 개인정보를 지체 없이 파기합니다.
+⑨ “BooKU”은 개인정보의 수집·이용·제공에 관한 동의 란을 미리 선택한 것으로 설정해두지 않습니다. 또한 개인정보의 수집·이용·제공에 관한 이용자의 동의거절시 제한되는 서비스를 구체적으로 명시하고, 필수수집항목이 아닌 개인정보의 수집·이용·제공에 관한 이용자의 동의 거절을 이유로 회원가입 등 서비스 제공을 제한하거나 거절하지 않습니다.
+
+제9조(“BooKU“의 의무)
+① “BooKU”은 법령과 이 약관이 금지하거나 공서양속에 반하는 행위를 하지 않으며 이 약관이 정하는 바에 따라 지속적이고, 안정적으로 서비스 제공하는데 최선을 다하여야 합니다.
+② “BooKU”은 이용자가 안전하게 인터넷 서비스를 이용할 수 있도록 이용자의 개인정보(신용정보 포함)보호를 위한 보안 시스템을 갖추어야 합니다.
+③ “BooKU”이 상품이나 서비스에 대하여 「표시․광고의 공정화에 관한 법률」 제3조 소정의 부당한 표시․광고행위를 함으로써 이용자가 손해를 입은 때에는 이를 배상할 책임을 집니다.
+④ “BooKU”은 이용자가 원하지 않는 영리목적의 광고성 전자우편을 발송하지 않습니다.
+
+제10조(회원의 ID 및 비밀번호에 대한 의무)
+① 제17조의 경우를 제외한 ID와 비밀번호에 관한 관리책임은 회원에게 있습니다.
+② 회원은 자신의 ID 및 비밀번호를 제3자에게 이용하게 해서는 안됩니다.
+③ 회원이 자신의 ID 및 비밀번호를 도난당하거나 제3자가 사용하고 있음을 인지한 경우에는 바로 “BooKU”에 통보하고 “BooKU”의 안내가 있는 경우에는 그에 따라야 합니다.
+
+제20조(이용자의 의무) 이용자는 다음 행위를 하여서는 안 됩니다.
+1. 신청 또는 변경시 허위 내용의 등록
+2. 타인의 정보 도용
+3. “BooKU”에 게시된 정보의 변경
+4. “BooKU”이 정한 정보 이외의 정보(컴퓨터 프로그램 등) 등의 송신 또는 게시
+5. “BooKU” 기타 제3자의 저작권 등 지적재산권에 대한 침해
+6. “BooKU” 기타 제3자의 명예를 손상시키거나 업무를 방해하는 행위
+7. 외설 또는 폭력적인 메시지, 화상, 음성, 기타 공서양속에 반하는 정보를 BooKU에 공개 또는 게시하는 행위
+
+제11조(연결“BooKU”과 피연결“BooKU” 간의 관계)
+① 상위 “BooKU”과 하위 “BooKU”이 하이퍼링크(예: 하이퍼링크의 대상에는 문자, 그림 및 동화상 등이 포함됨)방식 등으로 연결된 경우, 전자를 연결 “BooKU”(웹 사이트)이라고 하고 후자를 피연결 “BooKU”(웹사이트)이라고 합니다.
+② 연결“BooKU”은 피연결“BooKU”이 독자적으로 제공하는 서비스 등에 의하여 이용자와 행하는 거래에 대해서 보증 책임을 지지 않는다는 뜻을 연결“BooKU”의 초기화면 또는 연결되는 시점의 팝업화면으로 명시한 경우에는 그 거래에 대한 보증 책임을 지지 않습니다.
+
+제12조(저작권의 귀속 및 이용제한)
+① “BooKU“이 작성한 저작물에 대한 저작권 기타 지적재산권은 ”BooKU“에 귀속합니다.
+② 이용자는 “BooKU”을 이용함으로써 얻은 정보 중 “BooKU”에게 지적재산권이 귀속된 정보를 “BooKU”의 사전 승낙 없이 복제, 송신, 출판, 배포, 방송 기타 방법에 의하여 영리목적으로 이용하거나 제3자에게 이용하게 하여서는 안됩니다.
+③ “BooKU”은 약정에 따라 이용자에게 귀속된 저작권을 사용하는 경우 당해 이용자에게 통보하여야 합니다.
+
+제13조(분쟁해결)
+① “BooKU”은 이용자가 제기하는 정당한 의견이나 불만을 반영하고 그 피해를 보상처리하기 위하여 피해보상처리기구를 설치․운영합니다.
+② “BooKU”은 이용자로부터 제출되는 불만사항 및 의견은 우선적으로 그 사항을 처리합니다. 다만, 신속한 처리가 곤란한 경우에는 이용자에게 그 사유와 처리일정을 즉시 통보해 드립니다.
+③ “BooKU”과 이용자 간에 발생한 분쟁과 관련하여 이용자의 피해구제신청이 있는 경우에는 공정거래위원회 또는 시·도지사가 의뢰하는 분쟁조정기관의 조정에 따를 수 있습니다.
+
+제14조(재판권 및 준거법)
+① “BooKU”과 이용자 간에 발생한 분쟁에 관한 소송은 제소 당시의 이용자의 주소에 의하고, 주소가 없는 경우에는 거소를 관할하는 지방법원의 전속관할로 합니다. 다만, 제소 당시 이용자의 주소 또는 거소가 분명하지 않거나 외국 거주자의 경우에는 민사소송법상의 관할법원에 제기합니다.
+② “BooKU”과 이용자 간에 제기된 소송에는 한국법을 적용합니다.
             </textarea>
             <p>
                 <label for="agree" class="checkbox_container">모든 약관을 확인했으며, 이에 동의합니다.
