--- a/templates/book/book_create.html
+++ b/templates/book/book_create.html
@@ -75,9 +75,11 @@
         </div>
 
         <div class="rows">
+            <div>
             <label>도서 상태</label>
             <button class="btn_state" onclick="show_box()"> <img src="{% static 'img/state_standard.png' %}" alt=""
                     height="19" width="19"> </button>
+               </div>
             <div class="state_box">
                 <div id="state_detail" class="white_content">
                     <span style="font-weight: bold;"> BooKU 도서 상태 기준 안내</span> <button class="btn_close_state"
