--- a/static/css/book_detail2.css
+++ b/static/css/book_detail2.css
@@ -1,29 +1,66 @@
+.wrapper{
+    display:flex;
+    justify-content:center;
+}
+
+.all{
+    display:flex;
+    justify-content:center;
+    align-items: center;
+
+}
+.left{
+    float: left;
+    width: 50%;
+}
+
+.right{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    float: right;
+    width: 50%;
+}
+
+.filtering-box{
+    width: 120rem;
+    height: 3.75rem;
+    border:0.0625rem solid #FF9F46;
+    background: #FF9F46;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+.filter-txt{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.875rem;
+    line-height: 1.813rem;
+    color: #FFFFFF;
+    margin-left: 9rem;
+}
+
 .book_detail_image{
-    position: absolute;
+    margin-top:2rem;
     width: 30.63rem;
     height: 30.63rem;
-    left: 383px;
-    top: 440px;
 }
 .book_detail_line{
     width: 34.38rem;
     height: 0rem;
     border: 0.0625rem solid #A8A8A8;
+    margin-left: 0rem;
 }
-.all_detail{
-    position: absolute;
-    left: 1006px;
-    top: 440px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
+.row first{
+
+
 }
+
 .book_writer_date{
-    position: absolute;
     width: 12.88rem;
     height: 4.063rem;
-    left: 330px;
-    top: 40px;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -52,11 +89,11 @@ button:focus {
 input:focus {
     outline: none;
 }
-.white_content {
+.white_content { /* 상태 박스 위치: absolute */
     display: none;
     position: absolute;
-    top: 50%;
-    left: 15%;
+    top: 65%;
+    left: 55%;
     width: 18.69rem;
     height: 7.188rem;
     padding: 1rem;
@@ -72,11 +109,8 @@ input:focus {
     font-size: 0.75rem;
 }
 .deal_text{
-    position: absolute;
     width: 23.56rem;
     height: 2.188rem;
-    left: -480px;
-    top: 500px;
     font-family: NanumGothic;
     font-style: normal;
     font-weight: bold;
@@ -86,14 +120,13 @@ input:focus {
     display: flex;
     align-items: center;
     text-align: center;
+    justify-content:center;
     color: #FB8F1D;
+    margin-left:4rem;
 }
 .btn_deal{
-    position: absolute;
     width: 30.63rem;
     height: 2.813rem;
-    left: -620px;
-    top: 540px;
     background: #FF8C38;
     box-shadow: 0rem  0.25rem  0.25rem rgba(0, 0, 0, 0.25);
     border-radius: 1.25rem;
@@ -102,16 +135,15 @@ input:focus {
     font-weight: bold;
     font-size: 1.25rem;
     line-height: 2.188rem;
-    /* identical to box height, or 146% */
     text-align: center;
     color: #FFFFFF;
     border: 0;
     outline:0;
+    margin-bottom:2rem;
 }
 .btn_update_delete{
-    position: absolute;
-    left: 30%;
-    top: 500px;
+    margin-left: 5rem;
+    margin-top:2rem;
 
 }
 .btn{
@@ -129,8 +161,6 @@ input:focus {
     border: 0;
     outline:0;
 }
-
-
 .state_btn {
     display: inline-block;
     position: relative;
@@ -153,7 +183,6 @@ input:focus {
     opacity: 0;
     cursor: pointer;
 }
-
 /* Create a custom radio button */
 .checkmark {
     display: block;
@@ -163,12 +192,10 @@ input:focus {
     border-radius: 50%;
     z-index: 10;
 }
-
 /* On mouse-over, add a grey background color */
 .state_btn:hover input~.checkmark {
     background-color: #ccc;
 }
-
 /* When the radio button is checked, add a blue background */
 .state_btn input:checked + .gradation1 {
     background-color: #945AA9;
@@ -182,23 +209,18 @@ input:focus {
 .state_btn input:checked +.gradation4 {
     background-color: #FF8301;
 }
-
 .gradation1 {
     border:solid #945AA9 0.375rem;
 }
-
 .gradation2 {
     border:solid #AA6287 0.375rem;
 }
-
 .gradation3 {
     border:solid #CC6F51 0.375rem;
 }
-
 .gradation4 {
     border:solid #FF8301 0.375rem;
 }
-
 .gradation_line{
     background: linear-gradient(to right, #945AA9, #AA6287, #CC6F51, #FF8301);
     height:0.375rem;
@@ -206,7 +228,6 @@ input:focus {
     position:absolute;
     z-index: 0;
 }
-
 .state{
     margin-left: 0.625rem;
     width: 23.06rem;
@@ -214,8 +235,3 @@ input:focus {
     justify-content: space-between;
     position:relative;
 }
-
-
-
-
-
