--- a/static/css/book_update.css
+++ b/static/css/book_update.css
@@ -381,11 +381,9 @@ form textarea {
     border-radius: 5px;
 }
 
-.white_content {
+.white_content2 {
     display: none;
-    position: absolute;
-    top: 45%;
-    left: 40%;
+
     width: 20rem;
     height: 7.188rem;
     padding: 16px;
@@ -401,13 +399,14 @@ form textarea {
     font-size: 0.75rem;
 }
 .btn_state{
-    position: absolute;
-    top: 45%;
-    left: 36%;
     border: 0;
     outline:0;
     background-color: #FFFFFF;
+
 }
+
+
+
 .btn_close_state{
     border: 0;
     outline:0;
