--- a/static/css/book_list2.css
+++ b/static/css/book_list2.css
@@ -251,18 +251,37 @@ button:focus {
 
 }
 .search_word{
+    height: 3.125rem;
+    width: 46.88rem;
+    border: 0.125rem solid #E0E0E0;
+    transform: rotate(-0.07deg);
+    border-radius: nullpx;
+    border:none;
+    outline: none;
     font-family: Inter;
     font-style: normal;
     font-weight: 500;
-    font-size: 2.25rem;
-    line-height: 5rem;
-    /* or 222% */
-    text-align: center;
+    font-size: 1.875rem;
+    text-align-last: center;
     color: #757575;
-        height: 3.125rem;
-    width: 46.88rem;
 }
 
+#search_major_bar{
+    width: 46.88rem;
+    height: 0rem;
+    border: 0.125rem solid #E0E0E0;
+    transform: rotate(-0.07deg);
+    margin-bottom:5rem;
+}
 
+#search2_form{
+    display:flex;
+    justify-content:center;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+.wrapper2{
+display:flex;
+}
 
 
