--- a/templates/book/book_search.html
+++ b/templates/book/book_search.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/book_list.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/book_list2.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -19,22 +19,21 @@ function close_box(){
 }
 </script>
 
-<div class="container">
-    <div class="wrapper">
-        <div class="search_word"> "{{ q }}" 검색 결과 <hr id="line_major_bar"> </div>
 
+    <div class="wrapper">
+        <div class="search_word"> "{{ q }}" 검색 결과 <hr id="search_major_bar"> </div>
         <button type="button" id="btn_create" onclick="location.href='{% url 'book:create' %}'" >전공책 등록하기</button>
     </div>
 
     <div class="wrapper">
-        <form action="{% url 'book:search' %}" method="post" id="search_form"> {% csrf_token %}
+        <form action="{% url 'book:search' %}" method="post" id="search2_form"> {% csrf_token %}
             <input class="search_input" type="search" placeholder="     도서 검색 (수업, 책제목, 저자 등)" name="q" >
             <button type="submit" class="btn_search" > <img src="{% static 'img/search_btn.png' %}" alt="" height="45" width="43"> </button>
         </form>
     </div>
 
-    <div class="wrapper filter">
-    <div class="filtering-box"> <span class="filter-txt" style="left:45%;"> 도서 검색 페이지 </span> </div>
+    <div class="wrapper2">
+    <div class="filtering-box"> <span class="filter-txt"> 도서 검색 페이지 </span></div>
     </div>
 
     {% if not books %}
@@ -95,6 +94,6 @@ function close_box(){
     </tbody>
 </table>
         {% endif %}
-</div>
+
 
 {% endblock %}
