--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
         <br>
         BooKU는 건국대학생 서울캠퍼스 학생이라면 누구나 쉽게 전공책을 거래할 수 있는 플랫폼입니다.
     </p>
-    <div class="explore">
+    <!-- <div class="explore">
         <button>Explore</button>
-    </div>
+    </div> -->
 </section>
 <section class="section-b">
     <img src="{% static 'img/index.svg' %}" class="index_img">
