--- a/static/css/book_create.css
+++ b/static/css/book_create.css
@@ -3,66 +3,75 @@
     margin: auto;
 }
 
-.rows {
-    overflow: hidden;
-    width: 100%;
-    margin: 20px 0 0 0;
+form{
+    margin:2rem 0;
+}
+
+.rows{
+    margin:1rem 0;
+}
+
+.two_columns {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .col1 {
-    float: left;
     width: 50%;
     padding-right:0.5rem;
 }
 
 .col2 {
-    float: right;
     width: 50%;
     padding-left:0.5rem;
 }
 
 label {
     display: block;
+}
+
+.book_state{
+    margin-bottom: 0.5rem
+}
+
+
+.book_state_label{
     font-weight: 600;
     font-size: 1.4rem;
     color: #5C5C5C;
 }
-
 .book_image {
-    float: left;
     width: fit-content;
 }
 
 .book_text {
-    float: right;
     width: fit-content;
 }
 
-
 #id_major {
-    width: 369px;
-    height: 50px;
-
-    border: 1px solid #AFB0B9;
+    width: 23rem;
+    height: 3.125rem;
+    border: 0.0625rem solid #AFB0B9;
     box-sizing: border-box;
-    border-radius: 6px;
+    border-radius: 0.375rem;
 }
 
 .btns {
     width: fit-content;
-    margin:50px auto;
+    margin:2rem auto;
 }
 
 .book_image_input {
     display: block;
-    width: 145px;
-    height: 145px;
+    width: 9.625rem;
+    height: 9.625rem;
     background-color: #F2F2F2;
-    border-radius: 10px;
-    font-size: 100px;
+    border-radius: 0.625rem;
+    font-size: 6.25rem;
     font-weight: 100;
     text-align: center;
-    line-height: 130px;
+    line-height: 8.125rem;
 }
 
 .book_image_input:hover{
@@ -70,22 +79,26 @@ label {
 }
 
 .book_text_input {
-    width: 590px;
-    height: 145px;
+    width: 36rem;
+    height: 9.625rem;
     border: none;
-
+    resize: none;
     background: #F2F2F2;
-    border-radius: 10px;
+    border-radius: 0.625rem;
+
+    font-weight: 600;
+    font-size: 1.25rem;
+    padding-top:0.75em;
+    padding-left:1.25em;
 }
 
 textarea:focus {
     outline: none;
 }
-
-input:focus {
-    outline: none;
+.price{
+    display:flex;
+    align-items:center;
 }
-
 
 #book_price {
     display: block;
@@ -99,9 +112,64 @@ input:focus {
     display:inline-block;
     width:10%;
     float:left;
-    border-radius:0 10px 10px 0;
+    border-radius:0 0.625rem 0.625rem 0;
 }
 
+
+.book_chatting_input {
+    width: 100%;
+}
+
+form textarea::placeholder {
+    color: #9C9C9C;
+}
+
+
+#id_price {
+    display: inline-block;
+    border-radius:0.625rem 0 0 0.625rem;
+    width:40%;
+    float:left;
+}
+
+#free_label {
+    display: inline-block;
+    font-weight: 500;
+    font-size: 1.25rem;
+    color: #FB8F1D;
+}
+
+.white_content {
+    display: none;
+    width: 20rem;
+    height: 7.188rem;
+    padding: 1rem;
+    box-shadow: 0px 0px 1.25rem 0.125rem rgba(0, 0, 0, 0.25);
+    background-color: white;
+    z-index:1002;
+    overflow: auto;
+}
+.state_box_txt{
+    font-size: 0.75rem;
+}
+.btn_state{
+    display:inline-block;
+    border: 0;
+    outline:0;
+    background-color: #FFFFFF;
+    height:1rem;
+    width:1rem;
+}
+.btn_close_state{
+    border: 0;
+    outline:0;
+    background-color: #FFFFFF;
+}
+
+
+.open_chatting{
+    width:100%;
+}
 
 /* -------------------------------------------- */
 /* radio button customizing */
@@ -111,15 +179,11 @@ input:focus {
     display: inline-block;
     position: relative;
     cursor: pointer;
-    font-size: 22px;
+    font-size: 1.375rem;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-
-    font-weight: normal;
-    font-size: 16px;
-
     text-align: center;
 
     color: #7A7A7A;
@@ -136,8 +200,8 @@ input:focus {
 .checkmark {
     display: block;
     background-color: white;
-    height: 40px;
-    width: 40px;
+    height: 2.5rem;
+    width: 2.5rem;
     border-radius: 50%;
     z-index: 10;
 }
@@ -180,15 +244,14 @@ input:focus {
 
 .gradation_line{
     background: linear-gradient(to right, #945AA9, #AA6287, #CC6F51, #FF8301);
-    height:6px;
-    width:99%;
+    height:0.375rem;
+    width:98%;
     position:absolute;
     z-index: 0;
 }
 
 .state{
-    margin-left: 10px;
-    width:369px;
+    width:23rem;
     display:flex;
     justify-content: space-between;
     position:relative;
@@ -200,21 +263,21 @@ input:focus {
 /* -------------------------------------------- */
 /* checkbox customizing */
 
-/* The free_btn */
+/* free_btn */
 .free_btn {
     display: inline-block;
     width:40%;
     float:left;
     position: relative;
-    padding-left: 35px;
+    padding-left: 2rem;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 1.25rem;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
     color:#FB8F1D;
-    margin-left: 10px;
+    margin-left: 0.625rem;
   }
   
   /* Hide the browser's default checkbox */
@@ -231,12 +294,12 @@ input:focus {
     position: absolute;
     top: 0;
     left: 0;
-    height: 30px;
-    width: 30px;
+    height: 1.9rem;
+    width: 1.9rem;
     background-color:white;
-    border: 2px solid #FF8C38;
+    border: 0.125rem solid #FF8C38;
     box-sizing: border-box;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
   }
   
   /* On mouse-over, add a grey background color */
@@ -259,80 +322,14 @@ input:focus {
   
   /* Style the checkmark/indicator */
   .free_btn .checkmark2:after {
-    left: 8px;
-    top: 2px;
-    width: 10px;
-    height: 20px;
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+    left: 0.07rem;
+    top: 0.1rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: #FC8C15;
+    border: solid white 1px;
   }
 
 /* -------------------------------------------- */
 
 
-.book_chatting_input {
-    width: 100%;
-}
-
-form textarea::placeholder {
-    color: #9C9C9C;
-}
-
-form textarea {
-    font-weight: 600;
-    font-size: 20px;
-    padding-top:12px;
-    padding-left:20px;
-}
-
-#id_price {
-    display: inline-block;
-    border-radius:10px 0 0 10px;
-    width:40%;
-    float:left;
-}
-
-#free_label {
-    display: inline-block;
-    font-weight: 500;
-    font-size: 20px;
-    color: #FB8F1D;
-}
-
-.freebox {
-    width: 30px;
-    height: 30px;
-    border: 2px solid #FF8C38;
-   border-radius: 5px;
-}
-
-.white_content {
-    display: none;
-
-    width: 20rem;
-    height: 7.188rem;
-    padding: 16px;
-    border: 0px solid black;
-    box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.25);
-    background-color: white;
-    z-index:1002;
-    overflow: auto;
-}
-.state_box_txt{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 0.75rem;
-}
-.btn_state{
-    border: 0;
-    outline:0;
-    background-color: #FFFFFF;
-}
-.btn_close_state{
-    border: 0;
-    outline:0;
-    background-color: #FFFFFF;
-}
