--- a/templates/user/password_reset_confirm.html
+++ b/templates/user/password_reset_confirm.html
@@ -1,23 +1,23 @@
 {% extends "base.html" %}
 {% load static %}
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/change_pwd_username.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/inform_page.css' %}">
 {% endblock %}
 {% block content %}
 <div class="content">
     {% if validlink %}
-    <form method="post">
+    <h1>비밀번호 재설정<hr></h1>
+    <form class="reset_form" method="post">
         {% csrf_token %}
-        <h3>비밀번호 재설정</h3>
         {% include 'form_errors.html' %}
-        <label for="old_password">새 비밀번호</label>
-        <input type="password" name="new_password1" id="new_password1">
-        <label for="old_password">새 비밀번호 확인</label>
-        <input type="password" name="new_password2" id="new_password2">
-        <button type="submit" class="">변경하기</button>
+        <label class="form_label" for="old_password">새 비밀번호</label>
+            <input type="password" name="new_password1" id="new_password1">
+            <label class="form_label" for="old_password">새 비밀번호 확인</label>
+            <input type="password" name="new_password2" id="new_password2">
+            <button class="submit_btn reset_btn" type="submit" class="">변경하기</button>
     </form>
     {% else %}
-    <h2>비밀번호 초기화를 실패하였습니다.</h2>
+    <h1>비밀번호 초기화를 실패하였습니다.</h1>
     <p>비밀번호 초기화 링크가 이미 사용되어 올바르지 않습니다. 비밀번호 초기화를 다시 해주세요.</p>
     {% endif %}
 </div>
