--- a/templates/user/email_auth_notice.html
+++ b/templates/user/email_auth_notice.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/email_auth_notice.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/inform_page.css' %}">
 {% endblock %}
 {% block content %}
 
 <div class="content">
-    <h2>회원가입</h2>
+    <h1>회원가입<hr></h1>
     <p>계정 생성에 사용해주신 이메일로 인증메일이 전송되었습니다.<br> 이메일 인증이 완료된 이후 로그인이가능합니다.</p>
 </div>
 {% endblock %}
