--- a/templates/user/password_reset_done.html
+++ b/templates/user/password_reset_done.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% load static %}
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/password_reset_done.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/inform_page.css' %}">
 {% endblock %}
 
 
 {% block content %}
 <div class="content">
-    <h2>비밀번호 변경링크가 전송되었습니다.</h2>
+    <h1>비밀번호 변경링크가 전송되었습니다.</h1>
     <p>입력한 이메일로 비밀번호 설정 안내문을 발송했습니다.
     
         만약 이메일을 받지 못하였다면, 등록하신 이메일을 다시 확인하시거나 스팸 메일함을 확인해주세요.</p>
